--- a/conf/db.properties
+++ b/conf/db.properties
@@ -2,3 +2,6 @@ driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/audiobooks?useUnicode=true&characterEncoding=utf8
 user=root
 password=123456
+#url=jdbc:mysql://heisibashujuku.mysql.rds.aliyuncs.com:3306/movie?useUnicode=true&characterEncoding=utf8
+#user=heisiba
+#password=2222
